2006-03-07  Johan Bilien <johan.bilien@nokia.com>
	* hildon-home/hildon-home-main.c: Fixed a bug introduced when
	  applying home background refactoring patch. Closes N#23715
	* libhildonmenu/libhildonmenu.[ch]: Use Favourites name logical_id
	* configure.ac: 2.6.1

2006-03-06  Johan Bilien <johan.bilien@nokia.com>
	* hildon-home/hildon-home-main.h: Corrected an id which changed
	  in the UI specs
	* libhildonmenu/libhildonmenu.c: Use a different icon for the
	  "Favourites" folder

2006-03-06  Johan Bilien <johan.bilien@nokia.com>
	* hildon-navigator/hn-wm-memory.c: Fixed bogus debug statement
	  (Closes N#23595)
	* hildon-status-bar/hildon-status-bar-main.c: renamed presence_plugin
	  to presence
	* configure.ac: 2.6.0

2006-03-03  Johan Bilien <johan.bilien@nokia.com>
	* hildon-status-bar/{hildon-status-bar-{main,item}.c: Hardcode
	  loading of the presence status bar applet

2006-03-03  Johan Bilien <johan.bilien@nokia.com>
	* hildon-navigator/hn-wm-watchable-app.[ch]
	  hildon-navigator/hn-wm.c
	  hildon-navigator/hn-wm-watched-window.[ch]:
	  Imported unresponsive application killing confirmation note

2006-03-02  Johan Bilien <johan.bilien@nokia.com>,
	* hildon-navigator/hildon-navigator.[ch]: removed unused functions
	* hildon-navigator/application-switcher.c: Play sound on opening
	  and closing windows

2006-03-02  Johan Bilien <johan.bilien@nokia.com>,
	* Imported applet settings handling:

	hildon-home/applet-manager.h
	* applet_manager_get_settings_handler(): new function for retrieving
	  menu item for applet settings access
	* applet_manager_get_settings(): new function for retrieving menu item
	  for applet settings access
	* documentation update
	
	hildon-home/applet-manager.c
	* applet_manager_get_settings_handler(): new function implementation
	* applet_manager_get_settings(): new function implementation
	
	hildon-home/hildon-home-main.c
	* global changes
	
	* menu_popup_handler(): call submenu recreation function before user