@@ -112,6 +112,10 @@ PKG_CHECK_MODULES(XLIBS, x11)
 AC_SUBST(XLIBS_CFLAGS)
 AC_SUBST(XLIBS_ERROR_LIBS)
 
+PKG_CHECK_MODULES(OSSO_HELP, libossohelp)
+AC_SUBST(OSSO_HELP_CFLAGS)
+AC_SUBST(OSSO_HELP_ERROR_LIBS)
+
 ALL_LINGUAS="en_GB"
 AC_SUBST(ALL_LINGUAS)
 AM_GLIB_GNU_GETTEXT
