@@ -3,7 +3,7 @@
 # SUBDIRS = po 
 
 INCLUDES = \
-	$(HILDON_CFLAGS) $(HILDON_FM_CFLAGS) \
+	$(HILDON_CFLAGS) $(HILDON_FM_CFLAGS) $(OSSO_HELP_CFLAGS)\
 	$(MB_CFLAGS) $(OSSO_CFLAGS) $(GNOME_VFS_CFLAGS) $(GCONF_CFLAGS) \
 	-DSN_API_NOT_YET_FROZEN \
 	-DHILDON_SAVE_STATE \
