@@ -2,6 +2,7 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
+desktopentrydir=@datadir@/applications/hildon
 
 Name: libhildonmenu
 Description: a library for reading and writing menu files
